# IAMActionHunter

./: .gitignore  IAMActionHunter.py  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pypi-publish.yml
IAMActionHunter/: IAMActionHunter.py
IAMActionHunter/configs/: all.py
IAMActionHunter/lib/: create_csv.py  data_collection.py  statement_parser.py
configs/: dangerous_iam.json  privescs.json  write_actions.json
lib/: data_collection.py  text_formatter.py
tests/: test_create_csv.py
